--- a/scripts/missed-moment.service
+++ b/scripts/missed-moment.service
@@ -1,13 +1,14 @@
 [Unit]
 Description=missed-moment service
-After=network.target
+Wants=missed-moment-audio-server.service
+After=network.target missed-moment-audio-server.service
 
 [Service]
 ExecStart=/usr/bin/python3 -u missed-moment.py
 WorkingDirectory=/home/pi/missed-moment
 StandardOutput=inherit
 StandardError=inherit
-Restart=always
+Restart=on-failure
 User=pi
 
 [Install]
