Add Audio Support (#5)
* save audio.  add in comments on how to use
jack-capture to save audio files in ringbuffer mode.
need to figure out how to start recording to save the
buffer.  also fixed having video actually be
30 seconds long, moved out in constant

* starting audio server and audio capture with remote control working

* missed-moment.py is working like judy.py is

* working merged mp4!  sound doesn't match video

* multiprocess audio and video capture to make audio sync down
to ~one second from ~three seconds

* add code to close camera resources.
add code to pass camera and stream to functions so
camera instantiation happens inside main function

* reset video stream at same time audio stream restarted

* WIP:  jackd and jack_capture running together.
jackd configuration has been added to missed-moment.service
so jackd can run inside a service (which is missed-moment service,
not missed-moment-audio-server service)

* change print to logging, update video pattern for only merged videos

* Remove missed-moment-audio-server line, no longer used

* Remove old comment line

* Updated all os.popen to subprocess.Popen.
Made an improvement to checking if the jack_capture file has been saved yet.

* Add crontab to delete files older than 7 days.
Change filename of jack_capture temp file so easier to delete files by file pattern

* PR rework

Co-authored-by: cherryshoe <cherryshoe@cs-mbp.local>

--- a/scripts/missed-moment.service
+++ b/scripts/missed-moment.service
@@ -2,12 +2,19 @@
 Description=missed-moment service
 After=network.target
 
+# The four settings under Service is for jackd support
+# LimitRTPRIO and LimitMEMLOCK must be set in systemd service file, because when run as a service
+# etc security limits.d audio.conf is not honored.  MEMLOCK unlimited is infinity in systemd
 [Service]
+LimitRTPRIO=95
+LimitMEMLOCK=infinity
+Environment="DISPLAY=:0"
+Environment="JACK_NO_AUDIO_RESERVATION=1"
 ExecStart=/usr/bin/python3 -u missed-moment.py
 WorkingDirectory=/home/pi/missed-moment
 StandardOutput=inherit
 StandardError=inherit
-Restart=always
+Restart=on-failure
 User=pi
 
 [Install]
